--- a/laboratory1/src/main/resources/templates/orderConfirmation.html
+++ b/laboratory1/src/main/resources/templates/orderConfirmation.html
@@ -29,7 +29,7 @@
         </tr>
         <tr>
             <td><b>Client Name </b></td>
-            <td><span th:text="${clietName}"></span></td>
+            <td><span th:text="${clientName}"></span></td>
         </tr>
         <tr>
             <td><b>Client IP Address</b></td>
