updated path for Back in edit-user

--- a/laboratory2/src/main/resources/templates/edit-user.html
+++ b/laboratory2/src/main/resources/templates/edit-user.html
@@ -56,7 +56,7 @@
                                placeholder="Client address">
                     </div>
                     <button id="submit" type="submit" class="btn btn-primary">Submit</button>
-                    <a type="button" class="btn btn-primary" href="/ticketOrder">Back</a>
+                    <a type="button" class="btn btn-primary" href="/ticketOrder/userdata">Back</a>
                 </form>
             </div>
         </div>
